# starred

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pythonpublish.yml
starred/: starred.py
