[tool.poetry]
name = "starred"
version = "3.2.0"
description = ""
authors = ["maguowei <imaguowei@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.2"
"github3.py" = "^1.3.0"
pytablewriter = "^0.58.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
